--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "foundation": "~5.4.3",
     "fontawesome": "~4.2.0",
     "angular-carousel": "~0.2.5",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "ng-file-upload": "~1.6.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
