--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "fontawesome": "~4.2.0",
     "angular-carousel": "~0.2.5",
     "underscore": "~1.7.0",
-    "ng-file-upload": "~1.6.7"
+    "ng-file-upload": "~1.6.7",
+    "angular-scroll": "~0.6.2",
+    "angular-touch": "~1.2.25"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
