--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "health3",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-cli": "^0.1.13",
+    "bower": "^1.3.11",
+    "yo": "^1.2.1"
+  },
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
@@ -26,7 +30,9 @@
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "time-grunt": "^0.3.1",
+    "generator-karma": "^0.8.3",
+    "generator-angular": "^0.9.8"
   },
   "engines": {
     "node": ">=0.10.0"
