--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "underscore": "~1.7.0",
     "ng-file-upload": "~1.6.7",
     "angular-scroll": "~0.6.2",
-    "angular-touch": "~1.2.25"
+    "angular-touch": "~1.2.25",
+    "modernizr": "~2.8.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
